--- a/META.yml
+++ b/META.yml
@@ -1,28 +1,34 @@
 ---
-abstract: 'generate an UNKNOWN test report'
+abstract: 'Pretending to be Acme::CPAN::Testers::UNKNOWN'
 author:
-  - 'Chris Williams <chris@bingosnet.co.uk>'
+  - 'David Golden <dagolden@cpan.org>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  File::Find: 0
+  File::Temp: 0
+  Test::More: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
-distribution_type: module
-generated_by: 'Module::Install version 1.01'
-license: perl
+  ExtUtils::MakeMaker: 6.30
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 4.300030, CPAN::Meta::Converter version 2.120921'
+license: apache
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Acme-CPAN-Testers-UNKNOWN
 no_index:
   directory:
-    - inc
     - t
+    - xt
+    - examples
+    - corpus
+  package:
+    - DB
 provides:
-  Acme::CPAN::Testers::UNKNOWN:
-    file: lib/Acme/CPAN/Testers/UNKNOWN.pm
-    version: 0.02
+  Acme::CPAN::Testers::FalsePositive:
+    file: lib/Acme/CPAN/Testers/FalsePositive.pm
+    version: 0.03
 requires:
-  perl: 5.6.0
-resources:
-  license: http://dev.perl.org/licenses/
-version: 0.02
+  perl: 5.008001
+  strict: 0
+  warnings: 0
+version: 0.03
